Оптимизация чтения
индексы, derived queries, EAGER чтение символа